# scrufflehog

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
docs/: AGENTIC.md
examples/: scrufflehog.toml
src/scrufflehog/: __init__.py  advisor.py  cli.py  config.py  engine.py  oracles.py  probes.py
src/scrufflehog/advisors/: __init__.py  llm.py
src/scrufflehog/coverage/: __init__.py  extract.py  semantics.py
src/scrufflehog/output/: __init__.py  json_out.py  sarif.py  text.py
src/scrufflehog/runners/: __init__.py  go_runner.py  node_runner.py  python_runner.py  rust_runner.py
tests/: test_advisor.py  test_live_runners.py  test_scrufflehog.py
