[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scrufflehog"
version = "0.1.1"
description = "Deterministically verify that your redactors actually redact."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Sean Turner" }]
keywords = ["security", "redaction", "pii", "secrets", "logging", "testing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
]
dependencies = []   # core is stdlib-only (tomllib on 3.11+)

[project.optional-dependencies]
agentic = []        # LLM advisor deps go here (opt-in)
dev = ["pytest>=7"]

[project.scripts]
scrufflehog = "scrufflehog.cli:main"

[project.urls]
Homepage = "https://github.com/seanturner83/scrufflehog"

[tool.hatch.build.targets.wheel]
packages = ["src/scrufflehog"]
